# Smart-House_II

./: .gitignore  README.md
App/Control_App/: ionic.config.json  package-lock.json  package.json
App/Control_App/android/app/: build.gradle  google-services.json
App/Control_App/android/app/src/main/: AndroidManifest.xml
App/Control_App/src/app/: app-routing.module.ts  connection.service.ts
App/Control_App/src/app/control/: control.page.html  control.page.ts
App/Control_App/src/app/home/: home.page.html  home.page.ts
App/Control_App/src/app/home/login/: login.page.html  login.page.ts
App/Control_App/src/theme/: variables.scss
App/Control_App/www/: common-es2015.js.map  common-es5.js.map  control-control-module-es2015.js  control-control-module-es2015.js.map  home-home-module-es2015.js  home-home-module-es2015.js.map  home-home-module-es5.js  home-home-module-es5.js.map  home-login-login-module-es2015.js  home-login-login-module-es2015.js.map  home-login-login-module-es5.js  home-login-login-module-es5.js.map  main-es2015.js  main-es5.js  main-es5.js.map  runtime-es2015.js.map  runtime-es5.js.map  styles-es5.js.map
Driver_Library/: CMakeLists.txt  README.txt
Driver_Library/include/: libgpio.h
Driver_Library/lib/: CMakeLists.txt  libgpio.c
Driver_Library/src/: main.c  main_distance.c
Server/: app.js  package-lock.json  package.json  server.js  smarthouseii-firebase-adminsdk-blks5-3986ebe726.json
Server/other/: otherServer.js  package-lock.json  smarthouseii-firebase-adminsdk-k1smw-6286f9e398.json
(+23 files in other folders)
